--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
-
 .primary-font {
     font-family: "Lexend", serif;
     font-optical-sizing: auto;
@@ -441,4 +439,8 @@ body:has(.sidebar-shown) {
 .sources-item:hover {
     color: var(--highlight);
     text-decoration: underline;
+}
+
+#section-b {
+    background: lightblue;
 }
