--- a/css/app.css
+++ b/css/app.css
@@ -334,7 +334,8 @@ body:has(.sidebar-shown) {
 }
 
 .landing-hero {
-    width: clamp(300px, 700px, 800px);
+    width: 80%;
+    min-width: 300px;
     height: 45dvh;
     text-align: center;
     padding: 1.5rem;
@@ -345,7 +346,6 @@ body:has(.sidebar-shown) {
     align-items: center;
     gap: 2.7rem;
     position: relative;
-    /* backdrop-filter: blur(5px); */
 }
 
 .hero-title {
@@ -362,9 +362,9 @@ body:has(.sidebar-shown) {
 
 #signature {
     color: white;
+    font-size: 1.3rem;
     font-weight: bold;
-    position: absolute;
-    bottom: 50px;
+    opacity: .8;
 }
 
 .main-content {
@@ -417,6 +417,16 @@ body:has(.sidebar-shown) {
 
 .report-section-image-container img {
     width: 55%;
+    object-fit: cover;
+}
+
+.report-section-video-container {
+    width: 100%;
+}
+
+.report-section-video-container video {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
